mise en prod pour test avec changement configuration et sonar